nats consume hiring along with the user id for the debrief
